# OpenRedditKarmaBot

./: .gitignore  CLAUDE.md  README.md  openredditkarmabot-presentation.html
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/models/: requests.py  responses.py
backend/app/routers/: demo.py  generate.py  settings.py  tone.py
backend/app/services/: demo_generator.py  prompt_engine.py  reddit_context.py  thread_builder.py  tone_analyzer.py  vllm_client.py
backend/scripts/: mock_openai_server.py
backend/tests/: test_config.py  test_demo_flow.py  test_generate.py  test_prompt_engine.py  test_reddit_context.py  test_tone_analyzer.py  test_vllm_client.py
backend/tests/fixtures/: sample_thread.json
docs/plans/: 2026-03-30-implementation-plan.md  2026-03-30-openredditkarmabot-design.md
extension/: manifest.json
extension/background/: service_worker.js
extension/content/: injector.js  scanner.js  typing_engine.js
extension/popup/: popup.css  popup.html  popup.js
extension/utils/: bigram_timings.js
scripts/: run_local_walkthrough.py  run_local_walkthrough.sh
tests/e2e/: walkthrough_harness.html
video/: package-lock.json  package.json  tsconfig.json
video/src/: Root.tsx  Video.tsx
video/src/components/: FadeIn.tsx  GlitchText.tsx  GridBackground.tsx  NeonCard.tsx  NeonText.tsx  TypeWriter.tsx
video/src/scenes/: AnglesScene.tsx  AntiDetectionScene.tsx  ArchitectureScene.tsx  BackendScene.tsx  BigramScene.tsx  ConfigScene.tsx  ContextScene.tsx  DataFlowScene.tsx  ExtensionScene.tsx  InjectorScene.tsx  (+16 more)
(+1 files in other folders)
